--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -29,7 +29,7 @@
                     android:layout_height="120dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="10dp"
-                    android:src="@drawable/user" />
+                    android:src="@drawable/user_add" />
 
                 <com.scuvanov.sofit.font.RobotoTextView
                     android:id="@+id/textViewTitle"
